2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Update rpm spec file ChangeLog.
	* roboptim-core.spec.in: Here.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix rpm spec file.
	* roboptim-core.spec.in: Remove ``.la'' file of the plug-in.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix rpm build requirements.
	* roboptim-core.spec.in: Here.

2010-01-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Build plug-in in a separate directory.

	CAUTION: starting now, plug-in will be located in
	in ``$(libdir)/roboptim-core'' which means that
	users have to change LTDL_LIBRARY_PATH accordingly.

	* roboptim-core.spec.in: Include plug-in in rpm.
	* src/Makefile.am: Install plug-in in a separate directory.

2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix issues reported by Fedora reviewer.
	* roboptim-core.spec.in: Fix dependencies as reported in ticket
	https://bugzilla.redhat.com/show_bug.cgi?id=538820.

2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix issues reported by Fedora reviewer.
	* roboptim-core.spec.in: Fix many problems reported in ticket
	https://bugzilla.redhat.com/show_bug.cgi?id=538820.

2010-01-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Add tar-ustar support in Automake to allow long filename.
	* configure.ac: Add tar-ustar option in AM_INIT_AUTOMAKE
	in order to package properly files with long names such	as
	``msvc/roboptim-core-dummy-plugin/roboptim-core-dummy-plugin.vcproj''.
	See http://www.gnu.org/software/automake/manual/automake.html#Options
	for more information.

2009-11-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool generate dlls on Windows.
	* configure.ac: Add win32-dll flag to LT_INIT to
	enable dlls building on Microsoft Windows platform.
	It implies that the package can be compiled using
	``-no-undefined''.

2009-11-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-11-18  Thomas Moulard  <thomas.moulard@gmail.com>
